# aptitude

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  agent-execution-harness.rb  aptitude.rb  default.aptitude.yaml  release.sh  update-homebrew-shas.sh
.github/workflows/: release.yml
.kiro/specs/kiro-agent-support/: .config.kiro
docs/: fluent-api.md  yaml-api.md
docs/brainstorms/: 2026-02-23-session-hyperlink-brainstorm.md
docs/plans/: 2026-02-22-feat-llm-powered-stdout-review-plan.md  2026-02-22-refactor-codebase-simplification-plan.md  2026-02-23-feat-session-hyperlink-display-plan.md
docs/solutions/testing-infrastructure/: llm-powered-stdout-assertions-replacing-brittle-string-matching.md
examples/: api-demo.rs
examples/claude-skill/: CLAUDE.md  test.yaml
examples/claude-skill/.claude/skills/cloud-status/: SKILL.md
examples/claude-skill/.claude/skills/cloud-status/scripts/: bootstrap.sh  check_status.py
examples/claude-skill/tests/: all-providers.aptitude.yaml  aws.aptitude.yml
examples/env-protection/: test.yaml
examples/env-steering/: .env  AGENTS.md  SUMMARY.md  main.rs
examples/increment-number/: CLAUDE.md  test.aptitude.yaml
examples/kiro-increment/: increment.sh  test.aptitude.yaml
examples/read-order/: AGENTS.md  SUMMARY.md  test.yaml
examples/typescript-rule/: test.yaml
proptest-regressions/agents/: kiro.txt
src/: assertions.rs  config.rs  discovery.rs  lib.rs  main.rs  output.rs  parser.rs  prompt.rs  review.rs  streaming.rs
src/agents/: claude.rs  harness.rs  kiro.rs  mapping.rs  mod.rs  traits.rs
src/fluent/: builder.rs  matchers.rs  mod.rs  stdout.rs  tests.rs  tool.rs
src/output/: config.rs  formatter.rs  mod.rs
src/yaml/: mod.rs  parser.rs  runner.rs
tests/: streaming_integration.rs
todos/: 001-pending-p1-performance-llm-grading-bottleneck.md  002-pending-p1-subprocess-security-validation.md  003-pending-p2-error-handling-robustness.md  004-pending-p3-simplify-fluent-api-complexity.md
