[package]
name = "agent-execution-harness"
version = "0.1.6"
edition = "2021"
description = "A test harness for validating AI agent behavior against steering guides"
license = "MIT"
repository = "https://github.com/tatimblin/agent-execution-harness"
keywords = ["testing", "ai", "agents", "claude"]
categories = ["development-tools::testing"]

[[bin]]
name = "harness"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
notify = "6"
clap = { version = "4", features = ["derive"] }
glob = "0.3"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
anyhow = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
