[package]
name = "aptitude"
version = "0.2.0"
edition = "2021"
description = "A test harness for validating AI agent behavior against steering guides"
license = "MIT"
repository = "https://github.com/tatimblin/aptitude"
keywords = ["testing", "ai", "agents", "claude"]
categories = ["development-tools::testing"]

[lib]
name = "aptitude"
path = "src/lib.rs"

[[bin]]
name = "aptitude"
path = "src/main.rs"

[[example]]
name = "env-steering"
path = "examples/env-steering/main.rs"

[features]
default = ["yaml"]
yaml = ["dep:serde_yaml"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { version = "0.9", optional = true }
thiserror = "1"
notify = "6"
clap = { version = "4", features = ["derive"] }
glob = "0.3"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
anyhow = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
