[package]
name = "aptitude"
version = "0.4.0"
edition = "2021"
description = "A test harness for validating AI agent behavior against steering guides"
license = "MIT"
repository = "https://github.com/tatimblin/aptitude"
keywords = ["testing", "ai", "agents", "claude"]
categories = ["development-tools::testing"]

[lib]
name = "aptitude"
path = "src/lib.rs"

[[bin]]
name = "aptitude"
path = "src/main.rs"

[features]
default = ["yaml", "kiro"]
yaml = ["dep:serde_yaml"]
kiro = ["dep:rusqlite"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { version = "0.9", optional = true }
thiserror = "1"
clap = { version = "4", features = ["derive"] }
glob = "0.3"
regex = "1"
dirs = "5"
anyhow = "1"
walkdir = "2"
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros", "io-util"] }
futures = "0.3"
async-trait = "0.1"
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

[dev-dependencies]
tempfile = "3"
proptest = "1"
